--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,6 @@
 [IDENTIFICATION]
 # Set your user agent string here.
-<<<<<<< HEAD
-USERAGENT = DEFAULT  AGENT
-=======
-USERAGENT = 91962114, 73076128, 58682444, 91736231
->>>>>>> 96da492 (commit scraper)
+USERAGENT = IR UW26 91962114, 73076128, 58682444, 91736231
 
 [CONNECTION]
 HOST = styx.ics.uci.edu
